--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -1,6 +1,6 @@
 version: 2
 updates:
-  - package-ecosystem: "composer", "github-actions"
+  - package-ecosystem: "composer, github-actions"
     directory: "/" # Location of package manifests
     schedule:
       interval: "weekly"
